fix: make alert z-index higher than settings button

--- a/app/components/alert/alert.module.scss
+++ b/app/components/alert/alert.module.scss
@@ -9,6 +9,7 @@
   gap: 0.2rem;
   display: flex;
   animation: fade 15s ease-in-out;
+  z-index: 3;
 
   .top {
     display: flex;
